--- a/test/test.html
+++ b/test/test.html
@@ -117,8 +117,8 @@
         // Run Tests
         //
         function run_tests() {
-            day8.re_frame.async_flow_fx.test_runner.set_print_fn_BANG_(testPrintLn);
-            day8.re_frame.async_flow_fx.test_runner.run_html_tests();
+            day8.re_frame.async_flow_fx_test_runner.set_print_fn_BANG_(testPrintLn);
+            day8.re_frame.async_flow_fx_test_runner.run_html_tests();
         }
 
         // Don't run any tests till this page is fully loaded.
